<resources>
    <string name="app_name">Plantt</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_my_plants">MyPlants</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="register_button_text">Register</string>
    <string name="search_btn_text">search</string>
    <string name="sign_in_txt">Sign In</string>
    <string name="register_text">Register</string>
    <string name="email_hint">Email</string>
    <string name="please_log_in_sign_up">Please Log In/Sign Up</string>
    <string name="or_text">or</string>
    <string name="password_txt">Password</string>
    <string name="your_plants">Your Plants</string>
    <string name="common_name">Common Name</string>
    <string name="last_watered_TV">last watered</string>
    <string name="enter_date_hint_ET">enter date</string>
    <string name="search_plant_button">Search Plant</string>
    <string name="search_btn">search</string>
    <string name="plant_name_query_ET">plant name</string>
    <string name="plant_type_search_query">plant type</string>
    <string name="purchased_date_text">purchased date</string>
    <string name="wikipediadestv_txt">WikipediaDesTV</string>
    <string name="favourite_cb_text">favourite</string>
    <string name="add_plant_btn">add plant</string>
    <string name="nickname_text_listlayout">Nickname</string>
    <string name="type_text_listlayout">type</string>
    <string name="registration_err_toast_txt">Registration failed... Account already exists? Trying signin.</string>
    <string name="nickname_hint">nickname</string>
    <string name="better_known_as_tv">better known as</string>
    <string name="last_watered_tv">last watered</string>
    <string name="save_btn_text">Save</string>
    <string name="plant_name_list_index_text">Plant Name</string>
    <string name="kill_plant_btn">Kill</string>
</resources>
